kubernetes/vpro-app/vproingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

    cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:  # Configure TLS settings
  - hosts:
      - vprofile.instantsummaries.online  # The domain for which the certificate is issued
    secretName: letsencrypt-nginx-vpro  # Name of the secret that will hold the SSL certificate
  rules:
  - host: vprofile.instantsummaries.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 8080
